--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "export NODE_TLS_REJECT_UNAUTHORIZED=0; nuxt dev",
-    "docker-dev": "export NODE_TLS_REJECT_UNAUTHORIZED=0; nuxt dev --host 0.0.0.0",
-    "generate": "export NODE_TLS_REJECT_UNAUTHORIZED=0; nuxt generate",
+    "dev": "nuxt dev",
+    "docker-dev": "nuxt dev --host 0.0.0.0",
+    "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .js,.vue .",
